objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Puchase_Source__c</fullName>
        <label>Puchase Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>Official Website</fullName>
                </value>
                <value>
                    <fullName>Third Party Vendor</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>General Admission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <formula>IF(  ISPICKVAL(Ticket_Type__c, &quot;VIP&quot;), 100* Tickets_Purchased__c , 50* Tickets_Purchased__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Ticket_Number</fullName>
        <active>true</active>
        <description>8 tickets or less and at least 1 ticket</description>
        <errorConditionFormula>Tickets_Purchased__c &gt; 8 ||  Tickets_Purchased__c &lt; 1</errorConditionFormula>
        <errorMessage>You have to buy between 1 and 8 tickets.</errorMessage>
    </validationRules>
</CustomObject>